--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~7.2.1",
     "@angular/router": "~7.2.1",
     "core-js": "^2.5.4",
+    "jwt-decode": "^2.2.0",
     "ng2-semantic-ui": "^0.9.7",
     "rxjs": "~6.3.3",
     "sweetalert2": "^8.0.1",
